# ml-zoomcamp-2024

./: README.md
10_k8s/: deployment.yaml
1_Intro_to_ML/: HomeWork1.ipynb  main.py
2_Regression/: HomeWork2.ipynb
3_classification/: HomeWork3.ipynb
4_metrics/: HomeWork4.ipynb
5_deployment/: HomeWork5.ipynb  Pipfile  client.py  dockerfile  mlzoomcamp.py
6_trees/: HomeWork6.ipynb
8_neural/data/: HomeWork8.ipynb
9_serverless/: Dockerfile  HomeWork9.ipynb  lambda_function.py  predict.py
capstone/: .gitignore  Dockerfile  README.md  app.py  midterm copy 3.ipynb  notebook-capstone.ipynb  predict.py  pyproject.toml  request.py  requirements.txt  train.py
capstone/model/: best_xgboost_model.joblib
midterm/: .gitignore  Dockerfile  README.md  midterm.ipynb  notebook.ipynb  predict.py  pyproject.toml  request.py  train.py
midterm/3/: best_random_forest_model.joblib  m.py  midterm3.ipynb
midterm/model/: dict_vectorizer.joblib
