[tool.poetry]
name = "capstone"
version = "0.1.0"
description = ""
authors = ["rafal szulinski"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
seaborn = "^0.13.2"
numpy = "^2.2.0"
matplotlib = "^3.10.0"
xgboost = "^2.1.3"
scikit-learn = "1.5.2"
jupyter = "^1.1.1"
streamlit = "^1.41.1"
fastapi = "^0.115.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
