[tool.poetry]
name = "midterm"
version = "0.1.0"
description = ""
authors = ["Rafal Szulinski"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
notebook = "^7.2.2"
imblearn = "^0.0"
pydantic = "^2.9.2"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
gunicorn = "^23.0.0"

[tool.poetry.dev-dependencies]
awsebcli = "^3.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
